// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation Component Snapshot test should render correctly regardless of properties 1`] = `
<div
  className="w-2/3  min-h-screen flex justify-center items-center mx-auto  text-center bg-white"
>
  <div
    className="bg-white rounded-lg shadow-2xl"
  >
    <div
      className="border-green-600 flex w-96 rounded-lg border-t-8"
    >
      <div
        className="mt-5 p-10 mx-auto w-full"
      >
        <h1
          className="text-gray-800 h1"
        >
          Hello world
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Confirmation Component Snapshot test should render correctly regardless of properties 2`] = `
<div
  className="w-1/3  min-h-screen flex justify-center items-center mx-auto  text-center bg-white"
>
  <div
    className="bg-white rounded-lg shadow-2xl"
  >
    <div
      className="border-red-600 flex w-96 rounded-lg border-t-8"
    >
      <div
        className="mt-10 p-10 mx-auto w-full"
      >
        <h1
          className="text-gray-800 h1"
        >
          Apples
        </h1>
      </div>
    </div>
    <div
      className="flex py-10 px-10 space-x-4"
    >
      <a
        className="flex rounded-md shadow btn btn-green"
        href="/login"
        onClick={[Function]}
      >
        
      </a>
    </div>
  </div>
</div>
`;

exports[`Confirmation Component Snapshot test should render correctly regardless of properties 3`] = `
<div
  className="w-1/3  min-h-screen flex justify-center items-center mx-auto  text-center bg-white"
>
  <div
    className="bg-white rounded-lg shadow-2xl"
  >
    <div
      className="border-green-600 flex w-96 rounded-lg border-t-8"
    >
      <div
        className="mt-10 p-10 mx-auto w-full"
      >
        <h1
          className="text-gray-800 h1"
        >
          Oranges
        </h1>
      </div>
    </div>
    <div
      className="flex py-10 px-10 space-x-4"
    >
      <a
        className="flex rounded-md shadow btn btn-green"
        href="/services"
        onClick={[Function]}
      >
        Summer
      </a>
    </div>
  </div>
</div>
`;

exports[`Confirmation Component Snapshot test should render correctly regardless of properties 4`] = `
<div
  className="w-2/3  min-h-screen flex justify-center items-center mx-auto  text-center bg-white"
>
  <div
    className="bg-white rounded-lg shadow-2xl"
  >
    <div
      className="border-red-600 flex w-96 rounded-lg border-t-8"
    >
      <div
        className="mt-5 p-10 mx-auto w-full"
      >
        <h1
          className="text-gray-800 h1"
        >
          Watermelon
        </h1>
      </div>
    </div>
  </div>
</div>
`;
